--- a/tp3.ipynb
+++ b/tp3.ipynb
@@ -124,10 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a9c8ebc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista generada: [2, 139, 109, 185, 52, 10, 39, 13, 165, 115, 14, 51, 132, 34, 161, 84, 22, 179, 42, 155]\n",
+      "El número 13 aparece 1 vez/veces en la lista.\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "lista_aleatoria = [randint(1, 200) for _ in range(20)]\n",
@@ -165,15 +174,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d04fd492",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista original: [17, 3, 17, 23, 46, 21, 32, 19]\n",
+      "Lista invertida: [19, 32, 21, 46, 23, 17, 3, 17]\n"
+     ]
+    }
+   ],
    "source": [
+    "from random import randint\n",
+    "lists_two = [randint(1, 50) for _ in range(8)]\n",
     "\n",
-    "# todo:\n",
-    "\n",
-    "lists_two = [randint(1, 50) for i in range(8)]"
+    "def invertir_lista(lista):\n",
+    "    \"\"\"\n",
+    "    Invierte el orden de los elementos de una lista sin utilizar métodos integrados como reverse() ni slicing.\n",
+    "    \n",
+    "    Parámetros:\n",
+    "    lista (list): Lista de números enteros.\n",
+    "    \n",
+    "    Retorna:\n",
+    "    list: Nueva lista con los elementos en orden inverso.\n",
+    "    \"\"\"\n",
+    "    lista_invertida = []\n",
+    "    for i in range(len(lista) - 1, -1, -1):\n",
+    "        lista_invertida.append(lista[i])\n",
+    "    return lista_invertida\n",
+    "print(f\"Lista original: {lists_two}\")\n",
+    "print(f\"Lista invertida: {invertir_lista(lists_two)}\")\n"
    ]
   },
   {
@@ -187,16 +220,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "bc0ec844",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista 1: [2, 4, 6, 7, 8]\n",
+      "Lista 2: [1, 3, 5, 9, 10]\n",
+      "Suma posición por posición: [3, 7, 11, 16, 18]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# todo:\n",
-    "\n",
-    "lists_one = [ 2,4,6,7,8 ]\n",
-    "lists_two = [ 1,3,5,9,10 ]"
+    "lists_one = [2, 4, 6, 7, 8]\n",
+    "lists_two = [1, 3, 5, 9, 10]\n",
+    "def sumar_listas_por_posicion(l1, l2):\n",
+    "    \"\"\"\n",
+    "    Suma los elementos de dos listas en cada posición, devolviendo una nueva lista con los resultados.\n",
+    "    \n",
+    "    Parámetros:\n",
+    "    l1 (list): Primera lista de números enteros.\n",
+    "    l2 (list): Segunda lista de números enteros.\n",
+    "    \n",
+    "    Retorna:\n",
+    "    list: Nueva lista con la suma de elementos en cada posición.\n",
+    "    \"\"\"\n",
+    "    lista_resultado = []\n",
+    "    for i in range(len(l1)):\n",
+    "        suma = l1[i] + l2[i]\n",
+    "        lista_resultado.append(suma)\n",
+    "    return lista_resultado\n",
+    "print(f\"Lista 1: {lists_one}\")\n",
+    "print(f\"Lista 2: {lists_two}\")\n",
+    "print(f\"Suma posición por posición: {sumar_listas_por_posicion(lists_one, lists_two)}\")\n"
    ]
   },
   {
@@ -211,13 +270,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b07326e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abecedario sin letras en posiciones múltiplos de 3: ['a', 'b', 'd', 'e', 'g', 'h', 'j', 'k', 'm', 'n', 'p', 'q', 's', 't', 'v', 'w', 'y', 'z']\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# todo:"
+    "import string\n",
+    "def eliminar_letras_en_multiplos_de_3():\n",
+    "    \"\"\"\n",
+    "    Crea una lista con las letras del abecedario, elimina aquellas cuya posición (empezando desde 1)\n",
+    "    es múltiplo de 3, y retorna la lista resultante.\n",
+    "    \n",
+    "    Retorna:\n",
+    "    list: Lista de letras del abecedario sin las que están en posiciones múltiplos de 3.\n",
+    "    \"\"\"\n",
+    "    abecedario = list(string.ascii_lowercase)\n",
+    "    letras_filtradas = []\n",
+    "    for i in range(len(abecedario)):\n",
+    "        posicion = i + 1 \n",
+    "        if posicion % 3 != 0:\n",
+    "            letras_filtradas.append(abecedario[i])\n",
+    "    return letras_filtradas\n",
+    "resultado = eliminar_letras_en_multiplos_de_3()\n",
+    "print(f\"Abecedario sin letras en posiciones múltiplos de 3: {resultado}\")\n"
    ]
   },
   {
