Se hizo esta el punto 10 y se finalizo las actividades

--- a/tp3.ipynb
+++ b/tp3.ipynb
@@ -315,13 +315,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "2365afcc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La palabra 'ama' es un palíndromo.\n"
+     ]
+    }
+   ],
    "source": [
+    "def es_palindromo(palabra):\n",
+    "    \"\"\"\n",
+    "    Verifica si una palabra es un palíndromo, comparando los caracteres desde ambos extremos.\n",
     "\n",
-    "# todo:"
+    "    Parámetros:\n",
+    "    palabra (str): La palabra ingresada por el usuario.\n",
+    "\n",
+    "    Retorna:\n",
+    "    bool: True si es palíndromo, False en caso contrario.\n",
+    "    \"\"\"\n",
+    "    longitud = len(palabra)\n",
+    "    for i in range(longitud // 2):\n",
+    "        if palabra[i] != palabra[longitud - 1 - i]:\n",
+    "            return False\n",
+    "    return True\n",
+    "palabra_usuario = input(\"Ingrese una palabra para verificar si es un palíndromo: \").lower()\n",
+    "if es_palindromo(palabra_usuario):\n",
+    "    print(f\"La palabra '{palabra_usuario}' es un palíndromo.\")\n",
+    "else:\n",
+    "    print(f\"La palabra '{palabra_usuario}' no es un palíndromo.\")\n"
    ]
   },
   {
@@ -336,14 +362,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "21a434b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intersección entre los conjuntos: {3, 4}\n"
+     ]
+    }
+   ],
    "source": [
     "conjunto1 = {1, 2, 3, 4}\n",
     "conjunto2 = {3, 4, 5, 6}\n",
-    "# todo:"
+    "def interseccion_manual(set1, set2):\n",
+    "    \"\"\"\n",
+    "    Calcula la intersección de dos conjuntos sin usar el operador & ni métodos integrados.\n",
+    "    \n",
+    "    Parámetros:\n",
+    "    set1 (set): Primer conjunto.\n",
+    "    set2 (set): Segundo conjunto.\n",
+    "    \n",
+    "    Retorna:\n",
+    "    set: Conjunto que contiene los elementos comunes a ambos.\n",
+    "    \"\"\"\n",
+    "    interseccion = set()\n",
+    "    for elemento in set1:\n",
+    "        if elemento in set2:\n",
+    "            interseccion.add(elemento)\n",
+    "    return interseccion\n",
+    "resultado = interseccion_manual(conjunto1, conjunto2)\n",
+    "print(f\"Intersección entre los conjuntos: {resultado}\")\n"
    ]
   },
   {
@@ -357,14 +408,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "0ef62008",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista original: [1, 2, 2, 3, 4, 4, 5]\n",
+      "Lista sin duplicados: [1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# todo:\n",
-    "lista = [1, 2, 2, 3, 4, 4, 5]\n"
+    "lista_original = [1, 2, 2, 3, 4, 4, 5]\n",
+    "def eliminar_duplicados(lista):\n",
+    "    \"\"\"\n",
+    "    Elimina los elementos duplicados de una lista utilizando un set.\n",
+    "    \n",
+    "    Parámetros:\n",
+    "    lista (list): Lista con posibles elementos repetidos.\n",
+    "    \n",
+    "    Retorna:\n",
+    "    list: Lista sin elementos duplicados.\n",
+    "    \"\"\"\n",
+    "    conjunto_sin_duplicados = set(lista)\n",
+    "    lista_sin_duplicados = list(conjunto_sin_duplicados)\n",
+    "    return lista_sin_duplicados\n",
+    "resultado = eliminar_duplicados(lista_original)\n",
+    "print(f\"Lista original: {lista_original}\")\n",
+    "print(f\"Lista sin duplicados: {resultado}\")\n"
    ]
   },
   {
@@ -379,13 +453,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "4c1fd0e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado de la multiplicación de matrices:\n",
+      "[58, 64]\n",
+      "[139, 154]\n"
+     ]
+    }
+   ],
    "source": [
+    "def multiplicar_matrices(matriz_a, matriz_b):\n",
+    "    \"\"\"\n",
+    "    Multiplica dos matrices (lista de listas) usando bucles anidados.\n",
     "\n",
-    "# todo:"
+    "    Parámetros:\n",
+    "    matriz_a (list of list of int): Primera matriz de tamaño m x n\n",
+    "    matriz_b (list of list of int): Segunda matriz de tamaño n x p\n",
+    "\n",
+    "    Retorna:\n",
+    "    list of list of int: Matriz resultante de tamaño m x p\n",
+    "    \"\"\"\n",
+    "    filas_a = len(matriz_a)\n",
+    "    columnas_a = len(matriz_a[0])\n",
+    "    filas_b = len(matriz_b)\n",
+    "    columnas_b = len(matriz_b[0])\n",
+    "    if columnas_a != filas_b:\n",
+    "        raise ValueError(\"Las matrices no son compatibles para la multiplicación\")\n",
+    "    resultado = [[0 for _ in range(columnas_b)] for _ in range(filas_a)]\n",
+    "    for i in range(filas_a):\n",
+    "        for j in range(columnas_b):\n",
+    "            for k in range(columnas_a):\n",
+    "                resultado[i][j] += matriz_a[i][k] * matriz_b[k][j]\n",
+    "    return resultado\n",
+    "matriz_1 = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "]\n",
+    "\n",
+    "matriz_2 = [\n",
+    "    [7, 8],\n",
+    "    [9, 10],\n",
+    "    [11, 12]\n",
+    "]\n",
+    "resultado = multiplicar_matrices(matriz_1, matriz_2)\n",
+    "print(\"Resultado de la multiplicación de matrices:\")\n",
+    "for fila in resultado:\n",
+    "    print(fila)\n"
    ]
   }
  ],
